feat: :heavy_plus_sign: postgresql and typeorm (#5)
* :heavy_plus_sign: postgresql and typeorm

* chore: setup postgres database server

* chore: Setup TypeORM and database connection

* chore: creating models

* :heavy_plus_sign: update typeorm

* refactor: creating models

* feat: User Apis

* feat: Post and Comment Apis
