# src/routes/index.ts
@@ -1,12 +1,19 @@
-import express from "express"
-import PingController from "../controllers/ping"
+import express from "express";
+import PingController from "../controllers/ping.controller";
+import UserRouter from "./user.router";
+import PostRouter from "./post.router";
+import CommentRouter from "./comment.router";
 
-const router = express.Router()
+const router = express.Router();
 
-router.get("/ping", async (req, res) => {
-    const controller = new PingController()
-    const response = await controller.getMessage()
-    return res.send(response)
+router.get("/ping", async (_req, res) => {
+    const controller = new PingController();
+    const response = await controller.getMessage();
+    return res.send(response);
 });
 
-export default router
+router.use("/users", UserRouter);
+router.use("/posts", PostRouter);
+router.use("/comments", CommentRouter);
+
+export default router;
